ME-37752: Created DragNDrop UI

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         />
     </head>
     <body style="margin: 0px">
-        <div id="root">
+        <div id="root" style="height: 100%;">
             <div id="preload-screen">
                 <img src="./src/assets/docAndImgIcon.svg" />
                 <span id="preload-screen-text">Загрузка</span>
