--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
             defer
             src="/src/app/index.tsx"
         ></script>
+        <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
     </body>
 </html>
