--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <span id="preload-screen-text">Загрузка</span>
             </div>
         </div>
+        <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+        <script>eruda.init();</script>
         <script
             type="module"
             defer
